--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,79 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+:root {
+  --dark-choco: #453623;
+  --light-choco: #fee9ce;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  color: var(--dark-choco);
+}
+
+.navbar {
+  display: flex;
+}
+
+#hamburger-menu {
+  width: 3rem;
+  height: 3rem;
+}
+
+.logo-title {
+  width: 100%;
+}
+
+.logo-title p {
+  font-weight: bold;
+}
+
+.navbar,
+.navbar-expanded {
+  background-color: var(--light-choco);
+}
+
+.navbar-expanded hr {
+  border: none;
+  border-top: 1px solid var(--dark-choco);
+}
+
+.nav-item {
+  display: flex;
+  height: 3rem;
+  justify-content: center;
+}
+
+.nav-item p {
+  align-self: center;
+}
+
+header {
+    background-image: url('../src/home-banner.jpg');
+    background-position: right;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+    text-align: center;
+    padding: 3rem;
+}
+
+header h1 {
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 1.5rem;
+}
+
+header h2{
+    font-size: 1.5rem;
+    letter-spacing: .5rem;
+    margin: 3rem 0;
+}
+
+header h3 {
+    font-size: 1rem;
+    letter-spacing: .125rem;
+    margin-bottom: 3rem;
+}
