--- a/css/home.css
+++ b/css/home.css
@@ -13,6 +13,11 @@ body {
   color: var(--dark-choco);
 }
 
+.navbar,
+.navbar-expanded {
+  background-color: var(--light-choco);
+}
+
 .navbar {
   display: flex;
 }
@@ -24,15 +29,7 @@ body {
 
 .logo-title {
   width: 100%;
-}
-
-.logo-title p {
-  font-weight: bold;
-}
-
-.navbar,
-.navbar-expanded {
-  background-color: var(--light-choco);
+  display: flex;
 }
 
 .navbar-expanded hr {
@@ -46,34 +43,50 @@ body {
   justify-content: center;
 }
 
+.nav-item img {
+    height: 80%;
+    align-self: center;
+}
+
 .nav-item p {
   align-self: center;
+  margin-left: .5rem;
 }
 
 header {
-    background-image: url('../src/home-banner.jpg');
-    background-position: right;
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: white;
-    text-align: center;
-    padding: 3rem;
+  background-image: url("../src/home-banner.jpg");
+  background-position: right;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  text-align: center;
+  padding: 3rem;
 }
 
 header h1 {
-    font-size: 2rem;
-    text-transform: uppercase;
-    letter-spacing: 1.5rem;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  letter-spacing: 1.5rem;
 }
 
-header h2{
-    font-size: 1.5rem;
-    letter-spacing: .5rem;
-    margin: 3rem 0;
+header h2 {
+  font-size: 1.5rem;
+  letter-spacing: 0.5rem;
+  margin: 3rem 0;
 }
 
 header h3 {
-    font-size: 1rem;
-    letter-spacing: .125rem;
-    margin-bottom: 3rem;
+  font-size: 1rem;
+  letter-spacing: 0.125rem;
+  margin-bottom: 3rem;
+}
+
+.search-stores {
+    padding: 1rem;
+    border-radius: 5rem;
+    background-color: white;
+}
+
+.search-stores input {
+    width: 100%;
 }
