--- a/css/home.css
+++ b/css/home.css
@@ -1,57 +1,4 @@
-:root {
-  --dark-choco: #453623;
-  --light-choco: #fee9ce;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  color: var(--dark-choco);
-}
-
-.navbar,
-.navbar-expanded {
-  background-color: var(--light-choco);
-}
-
-.navbar {
-  display: flex;
-}
-
-#hamburger-menu {
-  width: 3rem;
-  height: 3rem;
-}
-
-.logo-title {
-  width: 100%;
-  display: flex;
-}
-
-.navbar-expanded hr {
-  border: none;
-  border-top: 1px solid var(--dark-choco);
-}
-
-.nav-item {
-  display: flex;
-  height: 3rem;
-  justify-content: center;
-}
-
-.nav-item img {
-    height: 80%;
-    align-self: center;
-}
-
-.nav-item p {
-  align-self: center;
-  margin-left: .5rem;
-}
+/* HEADER */
 
 header {
   background-image: url("../src/home-banner.jpg");
@@ -81,12 +28,97 @@ header h3 {
   margin-bottom: 3rem;
 }
 
+/* HEADER -> INPUT */
+
 .search-stores {
     padding: 1rem;
     border-radius: 5rem;
     background-color: white;
+    display: flex;
+}
+
+.search-stores img {
+    width: 1rem;
+    height: 1rem;
 }
 
 .search-stores input {
     width: 100%;
+    border: none;
+    margin-left: 1rem;
 }
+
+.search-stores input:focus {
+    outline: none;
+}
+
+.search-stores input::placeholder {
+    color: var(--dark-choco);
+}
+
+
+
+
+/* MAIN */
+
+main {
+    padding: 1rem;
+}
+
+/* MAIN -> NEWS */
+
+.news {
+    text-align: center;
+}
+
+.news h2 {
+    padding: 2rem;
+    font-size: 2rem;
+}
+
+.image-slider {
+    display: flex;
+    justify-content: center;
+}
+
+.news-image {
+    border-radius: 1rem;
+    margin: 0 1rem;
+    width: 80%;
+}
+
+.arrow {
+    height: 2rem;
+    align-self: center;
+}
+
+.dots {
+    margin: 1rem 0;
+}
+
+.dot {
+    height: .75rem;
+    width: .75rem;
+    border-radius: 50%;
+    margin: 0 .25rem;
+    background-color: var(--light-grey);
+    display: inline-block;
+}
+
+.dot-active {
+    background-color: var(--dark-choco);
+}
+
+main hr {
+    border: none;
+    border-top: 1px solid var(--light-grey);
+    width: 75%;
+    margin: 3rem auto;
+}
+
+/* MAIN -> NEW BREADS */
+
+.new-breads h2{
+    text-align: center;
+}
+
