--- a/css/home.css
+++ b/css/home.css
@@ -31,94 +31,145 @@ header h3 {
 /* HEADER -> INPUT */
 
 .search-stores {
-    padding: 1rem;
-    border-radius: 5rem;
-    background-color: white;
-    display: flex;
+  padding: 1rem;
+  border-radius: 5rem;
+  background-color: white;
+  display: flex;
 }
 
 .search-stores img {
-    width: 1rem;
-    height: 1rem;
+  width: 1rem;
+  height: 1rem;
 }
 
 .search-stores input {
-    width: 100%;
-    border: none;
-    margin-left: 1rem;
+  width: 100%;
+  border: none;
+  margin-left: 1rem;
 }
 
 .search-stores input:focus {
-    outline: none;
+  outline: none;
 }
 
 .search-stores input::placeholder {
-    color: var(--dark-choco);
+  color: var(--dark-choco);
 }
-
-
-
 
 /* MAIN */
 
 main {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 /* MAIN -> NEWS */
 
 .news {
-    text-align: center;
+  text-align: center;
 }
 
 .news h2 {
-    padding: 2rem;
-    font-size: 2rem;
+  padding: 2rem;
+  font-size: 2rem;
 }
 
 .image-slider {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .news-image {
-    border-radius: 1rem;
-    margin: 0 1rem;
-    width: 80%;
+  border-radius: 1rem;
+  margin: 0 1rem;
+  width: 80%;
 }
 
 .arrow {
-    height: 2rem;
-    align-self: center;
+  height: 2rem;
+  align-self: center;
 }
 
 .dots {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 .dot {
-    height: .75rem;
-    width: .75rem;
-    border-radius: 50%;
-    margin: 0 .25rem;
-    background-color: var(--light-grey);
-    display: inline-block;
+  height: 0.75rem;
+  width: 0.75rem;
+  border-radius: 50%;
+  margin: 0 0.25rem;
+  background-color: var(--light-grey);
+  display: inline-block;
 }
 
 .dot-active {
-    background-color: var(--dark-choco);
+  background-color: var(--dark-choco);
 }
 
 main hr {
-    border: none;
-    border-top: 1px solid var(--light-grey);
-    width: 75%;
-    margin: 3rem auto;
+  border: none;
+  border-top: 1px solid var(--light-grey);
+  width: 75%;
+  margin: 3rem auto;
 }
 
 /* MAIN -> NEW BREADS */
 
-.new-breads h2{
-    text-align: center;
+.new-breads {
+  padding: 1rem;
 }
 
+.new-breads h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+}
+
+.bread {
+  cursor: pointer;
+  display: flex;
+  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  border-radius: 1rem;
+  margin: 2rem 0;
+}
+
+.bread:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.bread img {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 0.75rem;
+}
+
+.bread-info {
+  margin-left: 1rem;
+  align-self: center;
+}
+
+.bread-info h3 {
+  margin-bottom: 0.5rem;
+}
+
+.bread-seemore {
+  display: flex;
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
+}
+
+.seemore {
+  margin-right: 0.5rem;
+}
+
+.bread-more {
+  display: block;
+  text-align: center;
+}
+
+.bread-more .dots {
+  text-align: center;
+}
