--- a/css/home.css
+++ b/css/home.css
@@ -11,7 +11,7 @@ header {
 }
 
 header h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-transform: uppercase;
   letter-spacing: 1.5rem;
 }
@@ -82,11 +82,25 @@ main {
   border-radius: 1rem;
   margin: 0 1rem;
   width: 80%;
+  display: none;
+}
+
+.image-active {
+  display: inline-block;
 }
 
 .arrow {
   height: 2rem;
   align-self: center;
+  cursor: pointer;
+}
+
+#arrow-right:hover {
+  content: url('../src/arrow-right-fill.png');
+}
+
+#arrow-left:hover {
+  content: url('../src/arrow-left-fill.png');
 }
 
 .dots {
@@ -100,6 +114,11 @@ main {
   margin: 0 0.25rem;
   background-color: var(--light-grey);
   display: inline-block;
+  cursor: pointer;
+}
+
+.dot:hover {
+  background-color: var(--dark-choco);
 }
 
 .dot-active {
