--- a/css/home.css
+++ b/css/home.css
@@ -7,13 +7,22 @@ header {
   background-repeat: no-repeat;
   color: white;
   text-align: center;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 3rem;
+}
+
+.logo-light {
+  width: 4rem;
 }
 
 header h1 {
   font-size: 2rem;
   text-transform: uppercase;
   letter-spacing: 1.5rem;
+  margin-top: 1rem;
 }
 
 header h2 {
