--- a/css/base.css
+++ b/css/base.css
@@ -39,6 +39,7 @@ a {
   height: 1.5rem;
   align-self: center;
   margin-left: 0.5rem;
+  cursor: pointer;
 }
 
 .logo-title {
@@ -104,6 +105,10 @@ footer {
   text-align: center;
 }
 
+footer a {
+  display: inline-block;
+}
+
 footer img {
   width: 1.5rem;
   margin: 0 0.5rem;
@@ -148,18 +153,22 @@ footer p {
   span.nav-item {
     display: flex;
     align-content: center;
-    cursor: pointer;
     height: 100%;
     margin: 0;
+  }
+
+  .dropdown {
+    position: relative;
   }
 
   .products {
     background-color: var(--light-choco);
     position: absolute;
-    right: 5rem;
+    left: 0;
     top: 5rem;
     margin: 0;
     display: none;
+    width: 10rem;
   }
 
   .products a {
