--- a/css/home.css
+++ b/css/home.css
@@ -30,12 +30,14 @@ header h2 {
   font-size: 1.5rem;
   letter-spacing: 0.5rem;
   margin: 3rem 0;
+  font-weight: 100;
 }
 
 header h3 {
   font-size: 1rem;
   letter-spacing: 0.125rem;
   margin-bottom: 3rem;
+  font-weight: 100;
 }
 
 /* HEADER -> INPUT */
