--- a/css/home.css
+++ b/css/home.css
@@ -8,10 +8,12 @@ header {
   color: white;
   text-align: center;
   font-family: 'Vollkorn', serif;
+  height: 90vh;
 }
 
 .overlay {
   background-color: rgba(0, 0, 0, 0.5);
+  height: 100%;
   padding: 3rem;
 }
 
