--- a/css/custom.css
+++ b/css/custom.css
@@ -32,3 +32,82 @@ header h3 {
   letter-spacing: 0.125rem;
   font-weight: 100;
 }
+
+
+
+/* MAIN */
+main {
+  text-align: center;
+  padding: 3rem;
+}
+
+main h2 {
+  margin: 1rem;
+  font-size: 2rem;
+}
+
+.image-slider {
+  display: flex;
+  justify-content: center;
+}
+
+.arrow {
+  height: 2rem;
+  align-self: center;
+  cursor: pointer;
+}
+
+#arrow-left:hover {
+  content: url('../src/arrow-left-fill.png');
+}
+
+#arrow-right:hover {
+  content: url('../src/arrow-right-fill.png');
+}
+
+.cake-image img {
+  width: 15rem;
+  margin: 2rem;
+}
+
+.plain-marble {
+  position: absolute;
+  z-index: -100;
+}
+
+.cake {
+  display: none;
+}
+
+.cake-active {
+  display: inline-block;
+}
+
+main h3 {
+  font-size: 1.5rem;
+}
+
+main button {
+  background-color: var(--teal);
+  color: white;
+  padding: 1rem;
+  border-radius: .5rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: .125rem;
+  border: none;
+  position: absolute;
+  right: 0;
+  bottom: -.5rem;
+  cursor: pointer;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+main button:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+main section {
+  position: relative;
+}
+
