--- a/css/custom.css
+++ b/css/custom.css
@@ -177,4 +177,6 @@ main section {
   text-align: center;
   font-weight: bold;
   text-shadow: 2px 2px 6px #000000;
+  font-family: 'Cookie', cursive;
+  font-size: 1.5rem;
 }
