--- a/css/base.css
+++ b/css/base.css
@@ -83,19 +83,19 @@ span.nav-item {
 }
 
 #nav-home:hover img {
-  content: url('../src/home-icon-light.png');
+  content: url('../src/icons/home-icon-light.png');
 }
 
 #nav-classic:hover img {
-  content: url("../src/classic-icon-light.png");
+  content: url("../src/icons/classic-icon-light.png");
 }
 
 #nav-custom:hover img {
-  content: url("../src/custom-icon-light.png");
+  content: url("../src/icons/custom-icon-light.png");
 }
 
 #nav-checkout:hover img {
-  content: url("../src/checkout-icon-light.png");
+  content: url("../src/icons/checkout-icon-light.png");
 }
 
 /* FOOTER */
