--- a/css/detail.css
+++ b/css/detail.css
@@ -21,12 +21,8 @@ main h3 {
   font-weight: 100;
 }
 
-.rating {
-    width: 50%;
-}
-
 .rating img {
-    width: 15%;
+    width: 2rem;
 }
 
 .order {
@@ -37,21 +33,13 @@ main h3 {
     display: flex;
 }
 
-.stocks img {
-    width: 3rem;
-    cursor: pointer;
-}
-
 #stock {
     align-self: center;
-    margin: 0 .5rem;
+    margin: 0 1rem;
     font-size: 1.25rem;
 }
 
 .order button {
-    position: absolute;
-    right: 2rem;
-    bottom: 2rem;
     background-color: var(--teal);
     color: white;
     text-transform: uppercase;
@@ -64,6 +52,72 @@ main h3 {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);;
 }
 
+#add-to-cart {
+    position: absolute;
+    right: 2rem;
+    bottom: 2rem;
+}
+
+.stocks button {
+    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+    padding: 0;
+    font-weight: bold;
+}
+
 .order button:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.order h3, #subtotal, .order br {
+    display: none;
+}
+
+
+/* DESKTOP */
+@media screen and (min-width: 900px) {
+    .banner {
+        padding: 2rem;
+        display: grid;
+        place-items: center;
+    }
+
+    .banner img {
+        border-radius: 2rem;
+        height: 30rem;
+        object-fit: cover;
+    }
+
+    #content {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .information {
+        width: 60%;
+        padding-right: 0;
+    }
+
+    .order {
+        border: 1px solid var(--light-grey);
+        margin: 2rem;
+        border-radius: 1rem;
+        width: 20%;
+    }
+
+    .order h3 {
+        display: block;
+        font-weight: bold;
+    }
+
+    #subtotal, .order br {
+        display: block;
+    }
+
+    #add-to-cart {
+        position: static;
+        width: 100%;
+        margin-top: 2rem;
+    }
 }
