--- a/css/base.css
+++ b/css/base.css
@@ -23,6 +23,9 @@ a {
 }
 
 /* NAVBAR */
+nav {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
 
 .navbar-title,
 #navbar-expanded {
@@ -171,6 +174,7 @@ footer p {
     margin: 0;
     display: none;
     width: 10rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     z-index: 100;
   }
 
