--- a/css/checkout.css
+++ b/css/checkout.css
@@ -107,6 +107,7 @@ main {
   background-repeat: no-repeat;
   height: 30rem;
   position: relative;
+  border-radius: 2rem;
 }
 
 .overlay {
@@ -121,6 +122,7 @@ main {
   padding: 5rem;
   font-size: 250%;
   color: white;
+  border-radius: 2rem;
 }
 
 #total {
