--- a/css/checkout.css
+++ b/css/checkout.css
@@ -271,6 +271,10 @@ select {
   margin-top: 2rem;
 }
 
+.subs-check label {
+  padding-left: .5rem;
+}
+
 #submit-order {
   background-color: var(--teal);
   color: white;
